Fix BG on iOS

--- a/stylesheets/lolnet.css
+++ b/stylesheets/lolnet.css
@@ -33,9 +33,6 @@ h1 {
 #image {
   height: 100%;
   width: 100%;
-
-  background-repeat: no-repeat;
-  background-size: cover;
   position: fixed;
   z-index: 1;
 }
